[gd_scene load_steps=21 format=3 uid="uid://cnikyolov1heq"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_y1xxo"]
[ext_resource type="AudioStream" uid="uid://xj1y13uqyfsh" path="res://Sound/Music/intro.mp3" id="2_0wqf1"]
[ext_resource type="Texture2D" path="res://scenes/menuyeni.png" id="2_ph14s"]
[ext_resource type="Texture2D" path="res://sprites/kucuk_oyna_tasarm1.png" id="3_3nch4"]
[ext_resource type="Texture2D" path="res://sprites/kucuk_oyna_tasarm3.png" id="4_j25sr"]
[ext_resource type="Texture2D" path="res://sprites/kucuk_oyna_tasarm2.png" id="5_ftt2k"]
[ext_resource type="Texture2D" path="res://sprites/ayarlar_butonu1.png" id="6_rw014"]
[ext_resource type="Texture2D" path="res://sprites/ayarlar_butonu3.png" id="7_4qugu"]
[ext_resource type="Texture2D" path="res://sprites/ayarlar_butonu2.png" id="8_kgeq7"]
[ext_resource type="Texture2D" uid="uid://cr23dmr6t1yan" path="res://sprites/yukaribasmalisey.png" id="10_gl6fa"]
[ext_resource type="Texture2D" uid="uid://csqpyi6reodqs" path="res://sprites/basmalisey.png" id="11_36wcb"]

[sub_resource type="Gradient" id="Gradient_df5w4"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e5dqy"]
gradient = SubResource("Gradient_df5w4")
fill_from = Vector2(0.509174, 1)
fill_to = Vector2(0.504587, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t17ev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nrqba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_65yv0"]

[sub_resource type="Environment" id="Environment_ebdu5"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 0.62
glow_hdr_scale = 1.3
adjustment_enabled = true
adjustment_contrast = 1.32
adjustment_saturation = 0.92

[sub_resource type="Animation" id="Animation_tfvup"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Lowerfade:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(480, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Upperfade:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(480, -142)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_l1elr"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Lowerfade:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, -160), Vector2(480, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Upperfade:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 700), Vector2(480, 430)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1174, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4jj7w"]
_data = {
"RESET": SubResource("Animation_tfvup"),
"fade": SubResource("Animation_l1elr")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_y1xxo")

[node name="Menuback" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = 482.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ph14s")

[node name="Optionsback" type="TextureRect" parent="."]
modulate = Color(0.301961, 0.345098, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1165.0
offset_top = -1.0
offset_right = 1654.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_e5dqy")

[node name="MenuButtons" type="Node" parent="."]

[node name="Oyna" type="TextureButton" parent="MenuButtons"]
texture_filter = 1
offset_left = 330.0
offset_top = 6.0
offset_right = 424.0
offset_bottom = 47.0
scale = Vector2(1.5, 1.5)
toggle_mode = true
texture_normal = ExtResource("3_3nch4")
texture_pressed = ExtResource("4_j25sr")
texture_hover = ExtResource("5_ftt2k")

[node name="Ayarlar" type="TextureButton" parent="MenuButtons"]
texture_filter = 1
offset_left = 343.0
offset_top = 71.0
offset_right = 524.0
offset_bottom = 136.0
toggle_mode = true
texture_normal = ExtResource("6_rw014")
texture_pressed = ExtResource("7_4qugu")
texture_hover = ExtResource("8_kgeq7")

[node name="Cıkıs" type="Button" parent="MenuButtons"]
offset_left = 198.0
offset_top = 199.0
offset_right = 379.0
offset_bottom = 264.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxEmpty_t17ev")
toggle_mode = true
text = "Çıkış
"

[node name="OptionsButtons" type="Node" parent="."]

[node name="CheckButton" type="CheckButton" parent="OptionsButtons"]
offset_left = 603.0
offset_top = -14.0
offset_right = 808.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_nrqba")
button_pressed = true
text = "Tam Ekran                   "
flat = true
alignment = 2

[node name="Geri" type="Button" parent="OptionsButtons"]
offset_left = 600.0
offset_top = 221.0
offset_right = 781.0
offset_bottom = 286.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxEmpty_65yv0")
toggle_mode = true
text = "Geri"

[node name="Master2" type="HSlider" parent="OptionsButtons"]
offset_left = 810.0
offset_top = 89.0
offset_right = 1172.0
offset_bottom = 105.0
scale = Vector2(0.5, 0.5)
min_value = -25.0
max_value = 25.0

[node name="Master" type="Label" parent="OptionsButtons"]
offset_left = 609.0
offset_top = 58.0
offset_right = 832.0
offset_bottom = 152.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 66
text = "Master"

[node name="Music" type="HSlider" parent="OptionsButtons"]
offset_left = 810.0
offset_top = 140.0
offset_right = 1172.0
offset_bottom = 156.0
scale = Vector2(0.5, 0.5)
min_value = -25.0
max_value = 25.0

[node name="Music2" type="Label" parent="OptionsButtons"]
offset_left = 609.0
offset_top = 109.0
offset_right = 832.0
offset_bottom = 203.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 66
text = "Müzik"

[node name="Sfx" type="HSlider" parent="OptionsButtons"]
offset_left = 810.0
offset_top = 188.0
offset_right = 1172.0
offset_bottom = 204.0
scale = Vector2(0.5, 0.5)
min_value = -25.0
max_value = 25.0

[node name="Sfx2" type="Label" parent="OptionsButtons"]
offset_left = 609.0
offset_top = 157.0
offset_right = 832.0
offset_bottom = 251.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 66
text = "Sfx"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ebdu5")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 1
anchor_mode = 0

[node name="menumusic" type="AudioStreamPlayer2D" parent="Camera2D"]
position = Vector2(-1159, -16)
stream = ExtResource("2_0wqf1")
volume_db = 9.369
autoplay = true
bus = &"Music"

[node name="Fade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4jj7w")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="Lowerfade" type="Sprite2D" parent="CanvasLayer"]
z_index = 1
texture_filter = 1
position = Vector2(480, 700)
scale = Vector2(2, 2)
texture = ExtResource("10_gl6fa")
flip_h = true

[node name="Upperfade" type="Sprite2D" parent="CanvasLayer"]
z_index = 1
texture_filter = 1
position = Vector2(480, -142)
scale = Vector2(2, 2)
texture = ExtResource("11_36wcb")
flip_h = true

[connection signal="toggled" from="MenuButtons/Oyna" to="." method="_on_oyna_toggled"]
[connection signal="toggled" from="MenuButtons/Ayarlar" to="." method="_on_ayarlar_toggled"]
[connection signal="toggled" from="MenuButtons/Cıkıs" to="." method="_on_cıkıs_toggled"]
[connection signal="toggled" from="OptionsButtons/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="OptionsButtons/Geri" to="." method="_on_geri_toggled"]
[connection signal="value_changed" from="OptionsButtons/Master2" to="." method="_on_master_2_value_changed"]
[connection signal="value_changed" from="OptionsButtons/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="OptionsButtons/Sfx" to="." method="_on_sfx_value_changed"]
[connection signal="animation_finished" from="Fade" to="." method="_on_fade_animation_finished"]
